k8s/deployment-day0.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webplanes-day0
  labels:
    app: webplanes-day0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webplanes-day0
  template:
    metadata:
      labels:
        app: webplanes-day0
    spec:
      containers:
        - name: webplanes
          image: david62243/webplanes:v2.0-day0-4000s
          imagePullPolicy: Always
          resources:
            limits:
              cpu: '500m'
              memory: 1Gi
            requests:
              cpu: '500m'
              memory: 1Gi
