k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webplanes
  labels:
    app: webplanes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webplanes
  template:
    metadata:
      labels:
        app: webplanes
    spec:
      containers:
        - name: webplanes
          image: david62243/webplanes:v2.0
          imagePullPolicy: Always
          resources:
            limits:
              cpu: '500m'
              memory: 1Gi
            requests:
              cpu: '500m'
              memory: 1Gi
          volumeMounts:
            - mountPath: /data
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: planes
