k8s/load-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webplanes-load
  labels:
    app: webplanes-load
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webplanes-load
  template:
    metadata:
      labels:
        app: webplanes-load
    spec:
      containers:
        - name: webplanes-load
          image: david62243/webplanes:v2.0
          command: ["sleep", "3650d"]
          imagePullPolicy: Always
          resources:
            limits:
              cpu: '500m'
              memory: 1Gi
            requests:
              cpu: '500m'
              memory: 1Gi
          volumeMounts:
            - mountPath: /data
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: planes
