k8s/service-day0.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: webplanes-day0
  namespace: webplanes
  labels:
    app: webplanes-day0
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: webplanes-day0
