k8s/service-lb.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: webplanes-lb
  labels:
    app: webplanes
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: webplanes
  type: LoadBalancer
