k8s/service-nodeport.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: webplanes-nodeport
  namespace: webplanes
  labels:
    app: webplanes
spec:
  ports:
    - name: http
      port: 30002
      targetPort: 8080
      nodePort: 30002
  selector:
    app: webplanes
  type: NodePort
