k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webplanes
  namespace: webplanes
  annotations: #{}
    cert-manager.io/issuer: "letsencrypt-prod"
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  ingressClassName: webplanes
  tls:
  - hosts:
    - webplanes.westus2.cloudapp.azure.com
    secretName: webplanes-tls
  rules:
  - host: webplanes.westus2.cloudapp.azure.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webplanes
            port:
              number: 80
